hw4/user/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kia-user-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kia-hw4
  template:
    metadata:
      labels:
        app: kia-hw4
    spec:
      containers:
        - name: kia-otus-arch-user
          image: ilyakozyrev/kia-otus-arch-user:hw4
          ports:
            - name: user-web
              containerPort: 8001
          livenessProbe:
            httpGet:
              port: 8001
              path: /
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 2
          readinessProbe:
            httpGet:
              port: 8001
              path: /health
            initialDelaySeconds: 10
            periodSeconds: 5
